--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "html-webpack-plugin": "^5.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
+    "redux-micro-frontend": "^1.2.0",
     "serve": "^13.0.2",
     "ts-loader": "^9.2.6",
     "typescript": "^4.1.2",
